[package]
name = "squawk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.7.0", features = ["cookie-session"] }
actix-web = "4.1.0"
data-encoding = "2.3.2"
jsonwebtoken = "8.1.1"
lazy_static = "1.4.0"
oauth2 = "4.2.3"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
rand = "0.8.5"
ring = "0.16.20"
serde = "1.0.139"
serde_derive = "1.0.139"
serde_json = "1.0.82"

